<resources>
    <string name="app_name">Demo3</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="skip">跳过</string>
    <string name="start_app">立即开启</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="login">登录</string>
    <!--主页-->
    <string name="title">技术中心</string>
    <string name="loginout">退出登录</string>
    <string name="clearcache">清理缓存</string>
    <string name="version">当前版本</string>
    <string name="sort">排序</string>
    <string name="app_bars">路透社称，美国总统特朗普一直向印度施压，要求它在更大程度上开放市场。本周，他又在推特上抱怨“无法接受”印度的高额关税。
        一名印度官员称，12日启动的磋商本意是要为两国今后更多谈判“奠定基调”，但特朗普的推特表明美国将坚持其强硬立场。
        另有消息人士透露，印度外交部长苏杰生在最近的一次会议上对贸易官员说：“显然，特朗普正在准备一场大棋局。
        ”2018年，印美贸易总额为1421亿美元，其中，印度贸易顺差为242亿美元。
        有分析认为，参与美印此轮谈判的官员级别较低，双方或将更多地在事务层面进行磋商，比如讨论某类产品的关税门槛。
        另有消息人士告诉《环球时报》记者，印度今年初施行的电子商务新政及其衍生的数据本地化措施等问题也是这次磋商的焦点
        《印度教徒报》12日援引官方消息人士的话说，印美经贸磋商团队已经于11日举行“非正式会谈”，正式磋商从12日开始。
        在11日的记者会上，库马尔将双方的经贸分歧描述为“技术性问题”，并表示印度将以建设性方式与美方合作。
        当被问及美国是否会在磋商中反对华为公司参与印度5G建设时，库马尔拒绝透露具体议题，仅表示“任何与贸易有关的问题都会被摆在桌面上”。
    </string>
    <string name="keyboard_key1">"&#64;"</string>
    <string name="keyboard_key2">"&#38;"</string>
    <string name="keyboard_key3">\"</string>
    <string name="keyboard_key4">"&#60;"</string>
    <string name="keyboard_key5">"&#62;"</string>
    <string name="verification">验证</string>
    <string name="custom">自定义</string>
    <string name="search">搜索</string>
    <string name="music">音乐</string>
    <string name="data">数据</string>
    <string name="game">游戏</string>
    <string name="dialog">对话框</string>

    <!--首页-->
    <string name="ic_channel_sort">频道排序</string>
    <string name="ic_drawable">Drawable</string>
    <string name="ai_top">悬浮吸顶</string>
    <string name="safe_keyboard">安全键盘</string>
    <string name="message_verification">短信验证</string>
    <string name="ic_xiaomi_timer">小米计时器</string>
    <string name="dialog_fragment">对话框</string>
    <string name="ic_windwill">风车</string>
    <string name="ic_super_button">超级按钮</string>
    <string name="ic_water_picture">水印图片</string>
    <string name="ic_timing_tasks">定时任务</string>
    <string name="ic_csv_table">CSV</string>
    <string name="ic_temperature">温度计</string>
    <string name="ic_circle_menu">转盘菜单</string>
    <string name="ic_radar">雷达扫描</string>
    <string name="ic_marquee">跑马灯</string>
    <string name="ic_custom_clock">自定义时钟</string>
    <string name="ic_scroll_unlock">滑动解锁</string>
    <string name="ic_xpop">XPop</string>
    <string name="ic_scroll_check">滑动验证</string>
    <string name="ic_search_intime">及时搜索</string>
    <string name="ic_number_rain">数字雨</string>
    <string name="ic_run_number">数字滚动</string>
    <string name="ic_bottom_sheet">底部弹出</string>
    <string name="ic_compass_clock">罗盘时钟</string>
    <string name="ic_custom_ruler">自定义直尺</string>
    <string name="ic_city_location">城市定位</string>
    <string name="ic_bluetooth">蓝牙</string>
    <string name="ic_music_lrc">歌词同步</string>
    <string name="ic_movie_seat">电影选座</string>
    <string name="ic_time_picker">时间选择器</string>
    <string name="ic_auto_marquee">跑马灯</string>
    <string name="ic_sudo">数独</string>
    <string name="ic_sound_recording">录音及动画</string>
    <string name="ic_chat">聊天</string>
    <string name="ic_form">生成表格</string>
    <string name="ic_record_line">行走轨迹</string>
    <string name="ic_wether_report">天气预报</string>
    <string name="ic_time_down">倒计时</string>
    <string name="ic_scroll_select">滑动选择</string>
    <string name="ic_suitlines">曲线图</string>
    <string name="ic_zoom_image">放大镜</string>
    <string name="ic_gobang">五子棋</string>
    <string name="ic_tetris">俄罗斯方块</string>
    <string name="ic_chinese_chess">中国象棋</string>
    <string name="ic_puzzle_image">拼图游戏</string>
    <string name="ic_repeate_read">连连看</string>
    <string name="ic_alarm_clock">闹钟</string>
    <string name="ic_seal">印章</string>
    <string name="ic_item_open">列表展开</string>
    <string name="ic_level">水准仪</string>
    <string name="ic_colors">复制颜色</string>
    <string name="ic_kongzue">空竹对话框</string>
    <string name="ic_two_level_linkage">二级联动</string>
    <string name="ic_slide_menu">侧边菜单</string>
    <string name="ic_number_speed">数字测速仪</string>
    <string name="ic_monitor_notification">通知监控</string>
    <string name="ic_vertical_scroll_card">垂直滑动卡片</string>
    <string name="ic_clock_out">考勤打卡</string>
    <string name="ic_phone_monitor">手机监控</string>

    <string name="chu_river">楚河</string>
    <string name="chinese_border">汉界</string>
</resources>
