<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoginBg">
    <TextView
        android:id="@+id/txt_login_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorGray"
        android:text="1.0.0"
        android:padding="10dp"
        android:background="@null"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_appicon"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_bg"
            android:layout_marginTop="30dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/username"
                android:padding="10dp"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_username"
                android:textColorHint="@color/colorGray3"
                android:paddingStart="20dp"/>
            <ImageView
                android:id="@+id/iv_login_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/clear"
                android:padding="10dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_bg"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/password"
                android:padding="10dp"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_password"
                android:textColorHint="@color/colorGray3"
                android:paddingStart="20dp"
                android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_login_bg"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"/>
</RelativeLayout>