<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/headportrait"
            android:contentDescription="@null"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/txt_current_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:layout_marginStart="15dp"/>
            <TextView
                android:id="@+id/txt_workname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:layout_marginStart="15dp"/>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray3"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>
    <RelativeLayout
        android:id="@+id/cache_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/clearcache"
            android:textColor="@color/colorBlack2"
            android:textSize="16sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txt_cache"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/colorGray2"
            android:layout_alignParentEnd="true"
            android:gravity="center"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray3"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/version"
            android:textColor="@color/colorBlack2"
            android:textSize="16sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txt_appversion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/colorGray2"
            android:layout_alignParentEnd="true"
            android:gravity="center"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray3"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>
    <Button
        android:id="@+id/btn_loginout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_login_bg"
        android:text="@string/loginout"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"/>
</LinearLayout>